[gd_scene load_steps=4 format=2]

[ext_resource path="res://scene/lobi/playerlist.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/lobi/ruang_tunggu.gd" type="Script" id=2]
[ext_resource path="res://scene/map/map_generator.tscn" type="PackedScene" id=3]

[node name="ruangan_lobi" type="Spatial"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -26.0

[node name="HFlowContainer" type="HFlowContainer" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="nama" type="Label" parent="CanvasLayer/Panel/HFlowContainer"]
margin_top = 5.0
margin_right = 35.0
margin_bottom = 19.0
text = "nama"

[node name="Label_nama" type="Label" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 39.0
margin_top = 5.0
margin_right = 74.0
margin_bottom = 19.0
text = "nama"

[node name="LineEdit_nama" type="LineEdit" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 78.0
margin_right = 136.0
margin_bottom = 24.0

[node name="seed" type="Label" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 140.0
margin_top = 5.0
margin_right = 171.0
margin_bottom = 19.0
text = "seed"

[node name="Label_seed" type="Label" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 175.0
margin_top = 5.0
margin_right = 206.0
margin_bottom = 19.0
text = "seed"

[node name="LineEdit_seed" type="LineEdit" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 210.0
margin_right = 268.0
margin_bottom = 24.0

[node name="ukuran" type="Label" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 272.0
margin_top = 5.0
margin_right = 315.0
margin_bottom = 19.0
text = "ukuran"

[node name="Label_ukuran_seed" type="Label" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 319.0
margin_top = 5.0
margin_right = 362.0
margin_bottom = 19.0
text = "ukuran"

[node name="LineEdit_ukuran_seed" type="LineEdit" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 366.0
margin_right = 424.0
margin_bottom = 24.0
text = "10"

[node name="acak_seed" type="Button" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 428.0
margin_right = 447.0
margin_bottom = 24.0
text = "c"

[node name="fps" type="Label" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 451.0
margin_top = 5.0
margin_right = 470.0
margin_bottom = 19.0
text = "fps"

[node name="Label_fps" type="Label" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 474.0
margin_top = 5.0
margin_right = 490.0
margin_bottom = 19.0
text = "60"

[node name="LineEdit_fps" type="LineEdit" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 494.0
margin_right = 552.0
margin_bottom = 24.0
text = "60"

[node name="mode" type="Label" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 556.0
margin_top = 5.0
margin_right = 593.0
margin_bottom = 19.0
text = "mode"

[node name="Label_mode" type="Label" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 597.0
margin_top = 5.0
margin_right = 634.0
margin_bottom = 19.0
text = "mode"

[node name="LineEdit_mode" type="LineEdit" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 638.0
margin_right = 696.0
margin_bottom = 24.0

[node name="jumlah" type="Label" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 700.0
margin_top = 5.0
margin_right = 787.0
margin_bottom = 19.0
text = "jumlah player"

[node name="Label_jumlah" type="Label" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 791.0
margin_top = 5.0
margin_right = 878.0
margin_bottom = 19.0
text = "jumlah player"

[node name="LineEdit_jumlah" type="LineEdit" parent="CanvasLayer/Panel/HFlowContainer"]
margin_left = 882.0
margin_right = 940.0
margin_bottom = 24.0

[node name="playerlist" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.854894, 0.518803, 0, -0.518803, 0.854894, 0, 30, 70.789 )

[node name="map_generator" parent="." instance=ExtResource( 3 )]
